Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -687,4 +687,10 @@ if (savedSize) {
     document.getElementById('bible-viewer').style.fontSize = currentFontSize + 'px';
 }
     </script>
+<footer class="bible-footer">
+    <div class="footer-content">
+        <p>&copy; <span id="current-year"></span> E.S LEE. All rights reserved.</p>
+        <p class="sub-text">본 자료의 무단 전재 및 재배포를 금지합니다.</p>
+    </div>
+</footer>
 </body>
